@@ -1,4 +1,5 @@
 Version 1.5.0-dev
+  * Fix asynchronous POST request on WIN32 platforms
   * Add utils/registry service
   * Initial support for WPS 2.0.0 including the Dismiss extension
   * Fix concurrency access to status informations
